# secureFileManager

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
secure_file_manager/: __init__.py  __main__.py  config.py
secure_file_manager/cli/: commands.py  main.py
secure_file_manager/database/: __init__.py  database.py  session.py
secure_file_manager/models/: __init__.py  base.py  directory.py  file.py  operation.py  user.py
secure_file_manager/services/: __init__.py  archive_service.py  auth_service.py  crypto_service.py  directory_service.py  file_service.py  json_xml_service.py  operation_service.py
shared/: system_info.json  welcome.txt
